--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>B-way</title>
+  <meta name="description" content="Maquinas de corte para Barberos, Peluqeros y Estilistas">
+  <meta name="keywords" content="BARBER,MAQUINAS,TRIMMER,CLIPPER,SHAVER,PELUQUERO,ESTILISTA,CABELLO,CORTE,BARBERIA,FADE,DEGRADE,SKIN,AFEITADO,AFEITAR,BARBA,BIGOTE">
+  <title>B-WAY</title>
   <link rel="stylesheet" href="SCSS/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,7 +89,7 @@
       <div class="visionini">
         <img class="vision-img"src="img/vision-img.webp" alt="vision-img">
         <div class="vitext">
-          <h3>NUESTRA VISION</h3>
+          <h3><strong>NUESTRA VISION</strong></h3>
           <p>En B-WAY somos un equipo de profesionales dedicados durante años a la belleza y el cuidado personal brindando herramientas de alta calidad y tecnología a profesionales de la industria. Con el tiempo comprendimos y adaptamos las necesidades de nuestros clientes para lograr instrumentos de belleza con prestaciones de altísima calidad. Nuestra visión pone a disposición de profesionales, estilistas y usuarios domésticos productos de alta performance,
              aquellos que fueron el resultado de investigación y desarrollo de tecnologías aplicadas pensadas para el uso mas exigente.
             </p>
