--- a/pages/pf.html
+++ b/pages/pf.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B-way</title>
+    <title>B-WAY-PF</title>
     <link rel="stylesheet" href="../SCSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,43 +71,82 @@
                     <p>Selecciona el producto que desees, agregalo al carrito y seguí el proceso de compra. Allí te
                         solicitará los datos de la tarjeta o medio de pago seleccionado.</p>
                     <h4>➡️¿Cómo comprar?</h4>
-                    <p>
-                        1. Elegí el producto que deseas comprar y hacé clic en el botón "Agregar al carrito".
+                    <ul>
+                        <li>
+                            <p>
+                                1. Elegí el producto que deseas comprar y hacé clic en el botón "Agregar al carrito".
+                            </p>
+                        </li>
 
-                        2. Puedes seguir agregando otros productos al carrito o sino hacé click en "Iniciar compra".
+                        <li>
+                            <p>2. Puedes seguir agregando otros productos al carrito o sino hacé click en "Iniciar
+                                compra"</p>.
+                        </li>
 
-                        3. Selecciona la modalidad de envío, completa tu dirección de email y hacé click en "Continuar".
 
-                        Los envíos se realizan a través de Correo Argentino.
+                        <li>
+                            <p>
+                                3. Selecciona la modalidad de envío, completa tu dirección de email y hacé click en
+                                "Continuar".
 
-                        Opción de envío a domicilio: teniendo en cuenta que las entregas, por parte del correo, se
-                        realizan los días hábiles de 8.30 a 18 hs., el envío por parte del correo puede tardar entre 3 y
-                        15 días hábiles, dependiendo del lugar de entrega.
+                                Los envíos se realizan a través de Correo Argentino.
 
-                        Opción de retiro: podes retirar tu compra en nuestra oficina ubicada en Palermo (a 5 cuadras de
-                        la estación de subte línea D) coordinando previamente por Whatsapp.
+                                Opción de envío a domicilio: teniendo en cuenta que las entregas, por parte del correo,
+                                se
+                                realizan los días hábiles de 8.30 a 18 hs., el envío por parte del correo puede tardar
+                                entre
+                                3 y
+                                15 días hábiles, dependiendo del lugar de entrega.
 
-                        4. Completa todos los datos y hace click en "Continuar". IMPORTANTE: CUALQUIERA DE LAS OPCIONES
-                        QUE ELIJAS, ES NECESARIO COMPLETAR TODOS LOS DATOS SIN EXCEPCIÓN, SINO, NO TE PERMITIRÁ PASAR AL
-                        SIGUIENTE PASO.
+                                Opción de retiro: podes retirar tu compra en nuestra oficina ubicada en Palermo (a 5
+                                cuadras
+                                de
+                                la estación de subte línea D) coordinando previamente por Whatsapp.
+                            </p>
+                        </li>
 
-                        5. Si tienes una cuenta en Mercado Pago, elegí la opción de "Usar mi cuenta Mercado Pago o
-                        Mercado Libre" y coloca tu dirección de email y clave con la que normalmente accedes a dicha
-                        plataforma. Si no tienes una cuenta en Mercado Pago, elige la opción "No tengo cuenta" y coloca
-                        tu dirección de email.
+                        <li>
+                            <p>4. Completa todos los datos y hace click en "Continuar". IMPORTANTE: CUALQUIERA DE LAS
+                                OPCIONES
+                                QUE ELIJAS, ES NECESARIO COMPLETAR TODOS LOS DATOS SIN EXCEPCIÓN, SINO, NO TE PERMITIRÁ
+                                PASAR AL
+                                SIGUIENTE PASO.
+                            </p>
+                        </li>
 
-                        Selecciona el medio de pago. En la casilla "Medio de pago" hace click y se desplegará todas las
-                        formas de pago, con tarjeta de crédito o Pago Fácil.
+                        <li>
+                            <p> 5. Si tienes una cuenta en Mercado Pago, elegí la opción de "Usar mi cuenta Mercado Pago
+                                o
+                                Mercado Libre" y coloca tu dirección de email y clave con la que normalmente accedes a
+                                dicha
+                                plataforma. Si no tienes una cuenta en Mercado Pago, elige la opción "No tengo cuenta" y
+                                coloca
+                                tu dirección de email.
 
-                        Una vez elegido el medio de pago, completa todos los datos y hace click en "Confirmar pago". Una
-                        vez acreditado, te llegará un email de Mercado Pago confirmándote el mismo.
-                        <br><strong>Tené en cuenta que tu pedido no será preparado hasta que se haya confirmado el pago
-                            del mismo.</strong>
-                        <br>En todos los casos, el pedido se mantendrá vigente por 1 día hábil. Después de ese plazo, si
-                        la compra no ha sido concretada o abonada mediante otros medios, se procederá a la cancelación
-                        de la orden y los productos volverán al stock. Si elegís la opción de abonar en efectivo en el
-                        local, o mediante transferencia bancaria, escribinos a hola@bway.com para que podamos coordinar
-                        el pago y la posterior entrega.
+                                Selecciona el medio de pago. En la casilla "Medio de pago" hace click y se desplegará
+                                todas
+                                las
+                                formas de pago, con tarjeta de crédito o Pago Fácil.
+
+                                Una vez elegido el medio de pago, completa todos los datos y hace click en "Confirmar
+                                pago".
+                                Una
+                                vez acreditado, te llegará un email de Mercado Pago confirmándote el mismo.
+                                Tené en cuenta que tu pedido no será preparado hasta que se haya confirmado el pago
+                                del mismo.</strong>
+                                En todos los casos, el pedido se mantendrá vigente por 1 día hábil. Después de ese
+                                plazo, si
+                                la compra no ha sido concretada o abonada mediante otros medios, se procederá a la
+                                cancelación
+                                de la orden y los productos volverán al stock. Si elegís la opción de abonar en efectivo
+                                en
+                                el
+                                local, o mediante transferencia bancaria, escribinos a hola@bway.com para que podamos
+                                coordinar
+                                el pago y la posterior entrega.
+                            </p>
+                        </li>
+                    </ul>
                     </p>
                     <h4>🔴¿Cuál es la política de cambio/devolución?</h4>
                     <p>Los cambios y devoluciones sólo serán realizados por desperfectos propios del producto al abrir
