--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B-way</title>
+    <meta name="description" content="Maquinas de corte para Barberos, Peluqeros y Estilistas">
+    <meta name="keywords" content="MAQUINAS,FASTER,TRIMMER,CLIPPER,SHAVER,CALIFORNIA,ONE,ZERO,FINISHER,MALIBU,STEELCLIP,STEEL-LINE,STEELFOIL,CORTE,BARBER,CABELLO,">
+    <title>PRODUCTOS B-WAY</title>
     <link rel="stylesheet" href="../SCSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
