--- a/pages/marca.html
+++ b/pages/marca.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B-way</title>
+    <meta name="description" content="Maquinas de corte para Barberos, Peluqeros y Estilistas">
+    <meta name="keywords" content="BARBER,NOSOTROS,INFO,MAQUINAS">
+    <title>NOSOTROS B-WAY</title>
     <link rel="stylesheet" href="../SCSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
